--- a/src/app/room-list/room-list.component.html
+++ b/src/app/room-list/room-list.component.html
@@ -66,7 +66,7 @@
       </div>
 
       <div *ngIf="rooms.length === 0" class="col-12 text-center">
-        <p class="alert alert-info">Aucune chambre disponible actuellement.</p>
+        <p class="alert alert-info">Aucune chambre disponible actuellement</p>
       </div>
     </div>
   </div>
