--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -24,6 +24,15 @@
           <li class="nav-item">
             <a class="nav-link" href="#" (click)="onLogout()">Logout</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/rooms" routerLinkActive="active">Chambres</a>
+          </li>
+          <li class="nav-item" *ngIf="isAdmin()">
+            <a class="nav-link" routerLink="/users" routerLinkActive="active">Gestion Utilisateurs</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/staff" routerLinkActive="active">Personnel</a>
+          </li>
         </ng-container>
       </ul>
     </div>
