cancel success booking

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -33,6 +33,12 @@
           <li class="nav-item">
             <a class="nav-link" routerLink="/staff" routerLinkActive="active">Personnel</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/my-bookings" routerLinkActive="active">Mes réservations</a>
+          </li>
+          <li class="nav-item" *ngIf="isStaff()">
+            <a class="nav-link" routerLink="/admin/bookings" routerLinkActive="active">Gestion des réservations</a>
+          </li>
         </ng-container>
       </ul>
     </div>
