--- a/src/app/staff-list/staff-list.component.html
+++ b/src/app/staff-list/staff-list.component.html
@@ -1,5 +1,5 @@
 <div class="container mt-4">
-  <h1 class="mb-4">Équipe du personnel</h1>
+  <h1 class="mb-4">Personnel</h1>
 
   <div *ngIf="errorMessage" class="alert alert-danger">
     {{ errorMessage }}
