--- a/src/app/room-list/room-list.component.html
+++ b/src/app/room-list/room-list.component.html
@@ -56,7 +56,7 @@
             <div class="d-flex justify-content-between align-items-center">
               <span class="badge bg-success">{{room.availableBeds}} lit(s) disponible(s)</span>
               <div>
-                <button (click)="openDetailsModal(room)" class="btn btn-info btn-sm me-2">Voir détails</button>
+                <button (click)="openDetailsModal(room)" class="btn btn-secondary btn-sm me-2">Voir détails</button>
                 <button (click)="openBookingModal(room)" class="btn btn-primary btn-sm">Réserver</button>              </div>
             </div>
           </div>
