--- a/src/app/room-list/room-list.component.html
+++ b/src/app/room-list/room-list.component.html
@@ -27,7 +27,7 @@
           <td>{{room.totalBeds}}</td>
           <td>{{room.availableBeds}}</td>
           <td>
-            <button (click)="openDetailsModal(room)" class="btn btn-sm btn-info me-2">Voir détails</button>
+            <button (click)="openDetailsModal(room)" class="btn  btn-primary me-2">Voir détails</button>
             <a [routerLink]="['/rooms/edit', room.id]" class="btn btn-sm btn-warning me-2">Modifier</a>
             <button (click)="deleteRoom(room.id)" class="btn btn-sm btn-danger">Supprimer</button>
           </td>
